--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -18,3 +18,12 @@ html body {
     padding: 1rem;
     text-align: center;
 }
+
+.overannounced-net{
+    color: #de3a0b;
+}
+    
+.unannounced-net{
+    color: #b0b0b0;
+}
+    
