feat: move title back to left, adjust some style

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -32,7 +32,10 @@ html body {
 }
 
 .app {
-  height: 100vh;
+  position: absolute;
+  height: calc(100vh - 20px);
+  width: calc(100vw - 20px);
+  padding: 10px;
 }
 
 ::view-transition-old(root),
