--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -52,10 +52,10 @@ html body {
   z-index: 2147483646;
 }
 
-[class="dark"]::view-transition-old(root) {
+[class='dark']::view-transition-old(root) {
   z-index: 2147483646;
 }
-[class="dark"]::view-transition-new(root) {
+[class='dark']::view-transition-new(root) {
   z-index: 1;
 }
 
